Add deterministic clustering and show class in UI
Class assignment problem little "fix"

--- a/GUI/Fix_&_Upscale_Image.ui
+++ b/GUI/Fix_&_Upscale_Image.ui
@@ -125,11 +125,22 @@
     </layout>
    </item>
    <item>
-    <widget class="QPushButton" name="CloseButton">
-     <property name="text">
-      <string>Close</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QLabel" name="Class_no">
+       <property name="text">
+        <string>Numer klasy:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="CloseButton">
+       <property name="text">
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
